--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -304,3 +304,42 @@ button {
   width: 100%;
   height: 100%;
 }
+
+/* RTL Support for Arabic */
+[dir="rtl"] {
+  text-align: right;
+}
+
+[dir="rtl"] .rtl-flip {
+  transform: scaleX(-1);
+}
+
+[dir="rtl"] .rtl-space-reverse {
+  flex-direction: row-reverse;
+}
+
+[dir="rtl"] .rtl-text-right {
+  text-align: right;
+}
+
+[dir="rtl"] .rtl-ml-auto {
+  margin-left: auto;
+  margin-right: 0;
+}
+
+[dir="rtl"] .rtl-mr-auto {
+  margin-right: auto;
+  margin-left: 0;
+}
+
+/* Arabic font optimization */
+[dir="rtl"] {
+  font-family: 'Arial', 'Tahoma', 'Segoe UI', sans-serif;
+}
+
+/* Fix for Arabic text in navigation and buttons */
+[dir="rtl"] .nav-item,
+[dir="rtl"] .button-text {
+  unicode-bidi: bidi-override;
+  direction: rtl;
+}
